ores/auto-commit => 'set'

--- a/apps/api-app/src/app/app.component.html
+++ b/apps/api-app/src/app/app.component.html
@@ -1,10 +1,15 @@
 <!--The content below is only a placeholder and can be replaced.-->
+
+
+<app-nav></app-nav>
+
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
 </div>
 
-<router-outlet></router-outlet>
 
-<app-main></app-main>
+<section>
+  <router-outlet></router-outlet>
+</section>
