--- a/apps/api-app/src/app/pages/main/main.component.html
+++ b/apps/api-app/src/app/pages/main/main.component.html
@@ -4,5 +4,9 @@
 
 
 <li *ngFor="let v of routes">
- <app-route></app-route>
+ <div *ngFor="let z of routes">
+   "dogs"
+   :fark
+  <!--<app-route></app-route>-->
+ </div>
 </li>
