ores/auto-commit => 'set'

--- a/apps/api-app/src/app/pages/main/main.component.html
+++ b/apps/api-app/src/app/pages/main/main.component.html
@@ -1,12 +1,14 @@
-<p>
-  main works!
-</p>
+
+<div>
+  top of main
+</div>
 
 
-<li *ngFor="let v of routes">
- <div *ngFor="let z of routes">
-   "dogs"
-   :fark
-  <!--<app-route></app-route>-->
- </div>
-</li>
+<app-routes>
+
+</app-routes>
+
+
+<div>
+  bottom of main
+</div>
