ores/auto-commit => 'set'

--- a/apps/api-app/src/app/pages/main/children/routes/routes.component.html
+++ b/apps/api-app/src/app/pages/main/children/routes/routes.component.html
@@ -3,7 +3,8 @@
   top of routes
 </div>
 
-<app-route></app-route>
+<app-route *ngFor="let r of routes" [ves]="r">
+</app-route>
 
 <div>
   bottom of routes
