--- a/apps/api-app/src/app/pages/main/children/route/route.component.html
+++ b/apps/api-app/src/app/pages/main/children/route/route.component.html
@@ -1,11 +1,20 @@
 
-<div>
-  top of route
-</div>
 
-route stuff
-<div>the val: {{ves.val}}</div>
+<mat-expansion-panel>
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      This is the expansion title
+    </mat-panel-title>
+    <mat-panel-description>
+      Mat Panel Description
+    </mat-panel-description>
+  </mat-expansion-panel-header>
 
-<div>
-  bottom of route
-</div>
+
+  <div>the val: {{ves.val}}</div>
+  <p> ( This is the primary content of the panel)</p>
+
+</mat-expansion-panel>
+
+
+
