--- a/apps/api-app/src/app/pages/main/main.component.html
+++ b/apps/api-app/src/app/pages/main/main.component.html
@@ -7,24 +7,5 @@
  </mat-form-field>
 </div>
 
-<!--<div>-->
-  <!--<mat-form-field>-->
-    <!--<mat-select [(ngModel)]="regime" name="regime-input" #regimeWidget>-->
-      <!--<mat-option [value]=1>daily</mat-option>-->
-      <!--<mat-option [value]=7>weekly</mat-option>-->
-      <!--<mat-option [value]=30>monthly</mat-option>-->
-      <!--<mat-option [value]=0>bei Bedarf</mat-option>-->
-      <!--<mat-option >other</mat-option>-->
-    <!--</mat-select>-->
-  <!--</mat-form-field>-->
-<!--</div>-->
 
-
-<app-routes>
-
-</app-routes>
-
-
-<div>
-  bottom of main
-</div>
+<app-routes></app-routes>
