ores/auto-commit => 'set'

--- a/apps/api-app/src/app/pages/main/children/routes/routes.component.html
+++ b/apps/api-app/src/app/pages/main/children/routes/routes.component.html
@@ -1,4 +1,3 @@
 
-<app-route-group
-  *ngFor="let list of routes" [ves]="r" [list]="list">
+<app-route-group *ngFor="let list of routes" [ves]="r" [list]="list">
 </app-route-group>
